--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,7 +1,15 @@
 
 .card {
-    padding: 1rem;
-    width: 50%;
+    padding: 1rem 0;
+    width: 100%;
+
+    @media ( min-width: 769px ) {
+        padding: 1rem;
+        width: 50%;
+    }
+
+    &.comingsoon { opacity: 0.3; }
+    
 
     .card__img-container {
         margin: 0;
@@ -14,11 +22,16 @@
 
     .card__title {
         font-size: 1.1rem;
+        line-height: 1.2;
         margin: 1.2rem 0 1rem 0;
     }
 
     .card__description {
         font-size: 1rem;
-        line-height: 1.4rem;
+        line-height: 1.4;
+
+        @media ( min-width: 769px ) {
+            line-height: 1.6;
+        }
     }
 }
