--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -2,19 +2,72 @@
 #header {
     margin: 0 auto;
     max-width: 1200px;
-    padding: 0 1rem;
+    padding: 1rem;
+
+    .hamburger {
+        display: none;
+        flex-direction: column;
+        cursor: pointer;
+        position: absolute;
+        z-index: 1;
+
+        @media ( max-width: 768px ) {
+            display: flex;
+
+            &.open .bar:nth-child(1) { transform: rotate(-45deg) translate(-7px, 6px); }
+            &.open .bar:nth-child(2) { opacity: 0; }
+            &.open .bar:nth-child(3) { transform: rotate(45deg) translate(-6px, -6px); }
+        }
+
+        .bar {
+            width: 26px;
+            height: 3px;
+            background-color: #000;
+            margin: 3px 0;
+            transition: 0.4s;
+        }
+    }
 
     nav {
+        @media ( max-width: 768px ) {
+            display: none;
+            align-items: center;
+            flex-direction: column;
+            justify-content: center;
+            width: 100%;
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background-color: rgba(255, 255, 255, 95%);
+            text-align: center;
+            z-index: 0;
+
+            &.open { display: flex; }
+        }
 
         ul {
             display: flex;
-            list-style: none;
             justify-content: flex-end;
+
+            margin: 0;
+            list-style: none;
+            padding: 0;          
+
+            @media ( max-width: 768px ) { flex-direction: column; }
 
             li {
                 font-weight: 500;
                 letter-spacing: 2px;
                 padding: 0 1rem;
+
+                @media ( max-width: 768px ) {
+                    font-size: 1.4rem;
+                    font-weight: 600;
+                    letter-spacing: 3px;
+                    margin: 1rem 0;
+                }
 
                 span {}
             }
