--- a/src/index.css
+++ b/src/index.css
@@ -9,23 +9,52 @@ body {
     margin: 0;
     min-width: 320px;
     min-height: 100vh;
-    padding: 1rem;
     text-rendering: optimizeLegibility;
     width: 100%;
 
     .page {
-        margin: 5rem auto 1rem auto;
-        max-width: 1200px;
+        padding: 1rem;
+
+        @media ( max-width: 768px ) {
+            margin: 2rem auto 3rem auto;
+            max-width: 550px;
+        }
+
+        @media ( min-width: 769px ) {
+            margin: 5rem auto 3rem auto;
+            max-width: 1200px;
+        }
 
         h1.introduction__title {
-            font-size: 2.8rem;
+            display: flex;
+            flex-direction: column;
+            flex-wrap: nowrap;
+
+            font-size: 2rem;
             font-weight: 600;
+            line-height: 1.2;
+
+            @media ( min-width: 769px ) {
+                flex-direction: row;
+                font-size: 2.8rem;
+
+                span:nth-child(2) {
+                    padding-inline-start: 1rem;
+                }
+            }
         }
 
         p.introduction__text {
-            font-size: 1.1rem;
+            font-size: 1rem;
             font-weight: 400;
-            line-height: 1.8rem;
+            line-height: 2;
+            width: 80%;
+
+            @media ( min-width: 769px ) {
+                font-size: 1.1rem;
+                line-height: 1.8;
+                width: 100%;
+            }
         }
 
         .highlighted-text {
