--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,8 +1,11 @@
 #home {
-    width: 100%;
 
     .introduction {
         max-width: 700px;
+
+        @media ( min-width: 769px ) {
+            padding: 0 1rem;
+        }
 
         .introduction__title {}
 
@@ -13,7 +16,15 @@
 
     .projects-container {
         display: flex;
-        
         margin-block-start: 5rem;
+
+        @media ( max-width: 768px ) {
+            flex-direction: column;
+            margin: 5rem auto 0 auto;
+        }
+
+        @media ( min-width: 769px ) {
+            flex-direction: row;
+        }
     }
 }
