Added more info and styles to Home.

--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -7,7 +7,9 @@
             padding: 0 1rem;
         }
 
-        .introduction__title {}
+        .introduction__title {
+            
+        }
 
         .introduction__text {
             
