--- a/src/index.css
+++ b/src/index.css
@@ -34,6 +34,11 @@ body {
             font-weight: 600;
             line-height: 1.2;
 
+            transform: translateY(100%);
+            opacity: 0;
+            animation: slide-up 1.2s ease-out 0.5s forwards;
+            position: relative;
+
             @media ( min-width: 769px ) {
                 flex-direction: row;
                 font-size: 2.8rem;
@@ -64,6 +69,17 @@ body {
             font-weight: 500;
             padding: 0.1rem 0.3rem;
         }
+    }
+}
+
+@keyframes slide-up {
+    from {
+        transform: translateY(100%);
+        opacity: 0;
+    }
+    to {
+        transform: translateY(0);
+        opacity: 1;
     }
 }
 
