--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -2,19 +2,22 @@
 #header {
     margin: 0 auto;
     max-width: 1200px;
-    padding: 1rem;
+    padding: 2.5rem 1rem 1rem 1rem;
 
     @media ( max-width: 768px ) {
         display: flex;
         justify-content: flex-end;
+        max-width: 550px;
+        padding: 0;
     }
 
     .hamburger {
         display: none;
         flex-direction: column;
         cursor: pointer;
+        padding: 2rem 2rem 1.5rem 1.5rem;
         position: absolute;
-        z-index: 1;
+        z-index: 2;
 
         @media ( max-width: 768px ) {
             display: flex;
@@ -25,39 +28,67 @@
         }
 
         .bar {
-            width: 26px;
-            height: 3px;
             background-color: #000;
+            height: 3px;
             margin: 3px 0;
             transition: 0.4s;
+            width: 26px;
         }
+    }
+
+    .hamburger,
+    .hamburger:focus,
+    .hamburger:focus-visible,
+    .hamburger:active {
+        outline: none;
+        background: transparent;
+        -webkit-tap-highlight-color: transparent;
     }
 
     nav {
         @media ( max-width: 768px ) {
-            display: none;
+            /*display: none;*/
+            display: flex;
             align-items: center;
             flex-direction: column;
             justify-content: center;
-            width: 100%;
-            position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
+
             background-color: rgba(255, 255, 255, 95%);
             text-align: center;
-            z-index: 0;
+            width: 100%;
+            z-index: 1;
 
-            &.open { display: flex; }
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            left: 0;
+            right: 0;
+
+            visibility: hidden;
+            opacity: 0;
+            transform: translateY(-20px);
+            transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out;
+
+            height: 100%;
+
+            &.open {
+                visibility: visible;
+                opacity: 1;
+                transform: translateY(0);
+            }
+
+            &.closing {
+                opacity: 0;
+                transform: translateY(-20px);
+            }
         }
 
         ul {
             display: flex;
             justify-content: flex-end;
 
-            margin: 0;
             list-style: none;
+            margin: 0;
             padding: 0;          
 
             @media ( max-width: 768px ) { flex-direction: column; }
