--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=block');
 
+
 body {
     display: flex;
     flex-direction: column;
@@ -16,7 +17,7 @@ body {
         padding: 1rem;
 
         @media ( max-width: 768px ) {
-            margin: 2rem auto 3rem auto;
+            margin: 5em auto 3rem auto;
             max-width: 550px;
         }
 
@@ -34,10 +35,11 @@ body {
             font-weight: 600;
             line-height: 1.2;
 
-            transform: translateY(100%);
+            transform: translateY(50%);
             opacity: 0;
-            animation: slide-up 1.2s ease-out 0.5s forwards;
+            animation: slide-up 1s ease-out 0.5s forwards;
             position: relative;
+            z-index: 0;
 
             @media ( min-width: 769px ) {
                 flex-direction: row;
@@ -74,7 +76,7 @@ body {
 
 @keyframes slide-up {
     from {
-        transform: translateY(100%);
+        transform: translateY(50%);
         opacity: 0;
     }
     to {
@@ -82,66 +84,3 @@ body {
         opacity: 1;
     }
 }
-
-/*
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
-}
-*/
