--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -83,6 +83,11 @@
             }
         }
 
+        @media ( min-width: 769px ) {
+            visibility: visible;
+            opacity: 1;
+        }
+
         ul {
             display: flex;
             justify-content: flex-end;
