--- a/src/index.css
+++ b/src/index.css
@@ -74,6 +74,15 @@ body {
     }
 }
 
+.fade-in {
+    opacity: 0;
+    transition: opacity 1s ease-out;
+}
+
+.fade-in.show {
+    opacity: 1;
+}
+
 @keyframes slide-up {
     from {
         transform: translateY(50%);
