--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -5,39 +5,40 @@
 
     @media ( min-width: 769px ) {
         padding: 1rem;
-        width: 50%;
+        flex: 0 0 50%;
     }
 
     &.comingsoon { opacity: 0.3; }
-    
-
-    .card__img-container {
-        margin: 0;
-        max-height: 359px;
-        overflow: hidden;
-        width: 100%;
-
-        img {
-            width: 100%;
-        }
-    }
 
     &.challenges {
         .card__img-container { background-color: #fba2ff; }
     }
 
-    .card__title {
-        font-size: 1.1rem;
-        line-height: 1.2;
-        margin: 1.2rem 0 1rem 0;
-    }
+    
+    a {
+        color: #000;
+        text-decoration: none;
 
-    .card__description {
-        font-size: 1rem;
-        line-height: 1.4;
+        .card__img-container {
+            margin: 0;
+            max-height: 359px;
+            overflow: hidden;
+            width: 100%;
+    
+            img { width: 100%; }
+        }
 
-        @media ( min-width: 769px ) {
-            line-height: 1.6;
+        .card__title {
+            font-size: 1.1rem;
+            line-height: 1.2;
+            margin: 1.2rem 0 1rem 0;
+        }
+    
+        .card__description {
+            font-size: 1rem;
+            line-height: 1.4;
+    
+            @media ( min-width: 769px ) { line-height: 1.6; }
         }
     }
 }
