--- a/src/index.css
+++ b/src/index.css
@@ -18,49 +18,74 @@ body {
         margin: 5rem auto;
         padding: 1rem;
 
-        @media ( max-width: 768px ) {
-            max-width: 550px;
+        @media ( max-width: 768px ) { max-width: 550px; }
+        @media ( min-width: 769px ) { max-width: 1200px; }
+
+        h2 {
+            font-size: 1.8rem;
         }
 
-        @media ( min-width: 769px ) {
-            max-width: 1200px;
+        h3 {
+            font-size: 1.6rem;
         }
 
-        h1.introduction__title {
-            display: flex;
-            flex-direction: column;
-            flex-wrap: nowrap;
+        h4 {
+            font-size: 1.4rem;
+        }
 
-            font-size: 2rem;
-            font-weight: 600;
-            line-height: 1.2;
+        h4 {
+            font-size: 1.2rem;
+        }
 
-            transform: translateY(50%);
-            opacity: 0;
-            animation: slide-up 1s ease-out 0.5s forwards;
-            position: relative;
-            z-index: 0;
+        p {
+            font-size: 1.1rem;
+            font-weight: 400;
+            line-height: 1.8;
+        }
 
+        .introduction {
+            max-width: 700px;
+    
             @media ( min-width: 769px ) {
-                flex-direction: row;
-                font-size: 2.8rem;
+                padding: 0 1rem;
+            }
 
-                span:nth-child(2) {
-                    padding-inline-start: 1rem;
+            h1.introduction__title {
+                display: flex;
+                flex-direction: column;
+                flex-wrap: nowrap;
+    
+                font-size: 2rem;
+                font-weight: 600;
+                line-height: 1.2;
+    
+                transform: translateY(50%);
+                opacity: 0;
+                animation: slide-up 1s ease-out 0.5s forwards;
+                position: relative;
+                z-index: 0;
+    
+                @media ( min-width: 769px ) {
+                    flex-direction: row;
+                    font-size: 2.8rem;
+    
+                    span:nth-child(2) {
+                        padding-inline-start: 1rem;
+                    }
                 }
             }
-        }
-
-        p.introduction__text {
-            font-size: 1rem;
-            font-weight: 400;
-            line-height: 2;
-            width: 80%;
-
-            @media ( min-width: 769px ) {
-                font-size: 1.1rem;
-                line-height: 1.8;
-                width: 100%;
+    
+            p.introduction__text {
+                font-size: 1rem;
+                font-weight: 400;
+                line-height: 2;
+                width: 80%;
+    
+                @media ( min-width: 769px ) {
+                    font-size: 1.1rem;
+                    line-height: 1.8;
+                    width: 100%;
+                }
             }
         }
 
