--- a/src/pages/Challenges/Challenges.css
+++ b/src/pages/Challenges/Challenges.css
@@ -7,11 +7,15 @@
             margin: 5rem auto 0 auto;
         }
 
+        @media ( min-width: 769px ) { padding: 0 1rem; }
+
         & > div {
             &:not(:first-child) { margin-block-start: 4rem; }
 
             p {
                 @media ( min-width: 769px ) {
+                    margin-inline-start: auto;
+                    margin-inline-end: auto;
                     max-width: 900px;
                 }
             }
@@ -20,6 +24,8 @@
                 margin: 1.5rem 0 2.5rem 0;
 
                 @media ( min-width: 769px ) {
+                    margin-inline-start: auto;
+                    margin-inline-end: auto;
                     max-width: 900px;
                 }
 
@@ -43,11 +49,11 @@
             }
 
             .challlenges__preview {
-                margin: 0 auto;
+                margin: 0 auto 2rem auto;
                 max-width: 900px;
 
                 img {
-                    height: auto;
+                    height: fit-content;
                     max-width: 300px;
                     width: 100%;
                 }
@@ -57,6 +63,7 @@
 
             .challlenges__images {
                 display: flex;
+                flex-wrap: wrap;
                 margin: 2rem auto;
 
                 @media ( max-width: 768px ) {
@@ -68,6 +75,8 @@
                 }
 
                 img {
+                    margin-block-start: 2rem;
+
                     @media ( max-width: 768px ) {
                         margin: 1rem auto;
                     }
