--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -113,6 +113,11 @@
                 a {
                     color: #000;
                     text-decoration: none;
+                    transition: all 0.3s ease;
+                }
+
+                &:hover {
+                    a { text-shadow: 1px 1px 1px #000; }
                 }
             }
         }
