--- a/src/pages/Challenges/Challenges.css
+++ b/src/pages/Challenges/Challenges.css
@@ -1,16 +1,16 @@
 
 #challenges {
     .challenges-container {
-        margin-block-start: 5rem;
+        margin-block-start: 6rem;
 
         @media ( max-width: 768px ) {
-            margin: 5rem auto 0 auto;
+            margin: 6rem auto 0 auto;
         }
 
         @media ( min-width: 769px ) { padding: 0 1rem; }
 
         & > div {
-            &:not(:first-child) { margin-block-start: 4rem; }
+            &:not(:first-child) { margin-block-start: 6rem; }
 
             p {
                 @media ( min-width: 769px ) {
@@ -42,15 +42,17 @@
                 height: auto;
                 margin: 0 auto;
                 width: 100%;
-                
-                @media ( max-width: 768px ) {
-                    
-                }         
             }
 
             .challlenges__preview {
-                margin: 0 auto 2rem auto;
+                background-size: 100% auto;
+                background-position: center;
+                background-repeat: no-repeat;
+                margin: 2rem auto;
                 max-width: 900px;
+                overflow: hidden;
+                width: 100%;
+                height: 320px;
 
                 img {
                     height: fit-content;
@@ -58,7 +60,29 @@
                     width: 100%;
                 }
 
-                &.signup { background-color: #fba2ff; }
+                &.signup {
+                    background-color: #fba2ff;
+                    background-position-x: -65px;
+                    background-size: 105% auto;
+                    @media ( max-width: 768px ) { background-size: 120% auto; }
+                }
+
+                &.checkout {
+                    background-color: #c5fcd2;
+                    background-size: 75% auto;
+                    @media ( max-width: 768px ) { background-size: 130% auto; }
+                }
+
+                &.calculator {
+                    background-color: #fda1c1;
+                    @media ( max-width: 768px ) { background-size: 130% auto; }
+
+                }
+                
+                &.homepage {
+                    background-color: #3d9cfb;
+                    @media ( min-width: 769px ) { background-size: 55% auto; }
+                }
             }
 
             .challlenges__images {
@@ -75,25 +99,20 @@
                 }
 
                 img {
+                    height: fit-content;
                     margin-block-start: 2rem;
-
-                    @media ( max-width: 768px ) {
-                        margin: 1rem auto;
-                    }
+                    @media ( max-width: 768px ) { margin: 1rem auto; }
                 }
 
-                .challenges__sketch {
-                    max-width: 500px;
-                    @media ( min-width: 769px ) { }
-                }
+                .border { border: 1px solid #000; }
 
-                .challenges__wireframe {
-                    border: 1px solid #000;
-                    max-width: 300px;
-                }
+                .challenges__sketch { max-width: 500px; }
+                .challenges__wireframe { max-width: 300px; }
+                .challenges__mockup { max-width: 300px; }
 
-                .challenges__mockup {
-                    max-width: 300px;
+                .desktop {
+                    max-width: 100%;
+                    @media ( min-width: 769px ) { margin: 2rem auto; }
                 }
             }
 
@@ -101,19 +120,37 @@
                 overflow: hidden;
                 transition: height 0.5s ease;
 
-                &.hidden {
-                    height: 0;
-                }
+                &.hidden { height: 0; }
             }
             
             .collapse {
-                cursor: pointer;
-                color: blue;
-                margin: 0 auto;
+                margin: 1.2rem auto 0 auto;
                 max-width: 900px;
-                transition: color 0.3s ease;
 
-                &:hover { color: darkblue; }
+                .collapse-inner {
+                    border: 2px solid #000;
+                    color: #000;
+                    cursor: pointer;
+                    display: flex;
+                    padding: 0.5rem 1rem;
+                    width: fit-content;
+                    
+                    span {
+                        font-weight: 600;
+                        letter-spacing: 1px;
+                        padding-right: 0.5rem;
+                    }
+
+                    path { fill: #000; }
+
+                    &:hover {
+                        background-color: #000;
+                        border: 2px solid #fff;
+                        color: #fff;
+                        path { fill: #fff; }
+                    }
+                }
+
             }
         }
     }
