--- a/src/pages/Challenges/Challenges.css
+++ b/src/pages/Challenges/Challenges.css
@@ -112,7 +112,10 @@
 
                 .desktop {
                     max-width: 100%;
-                    @media ( min-width: 769px ) { margin: 2rem auto; }
+                    @media ( min-width: 769px ) {
+                        margin: 2rem auto;
+                        max-width: 80%;
+                    }
                 }
             }
 
