--- a/src/index.css
+++ b/src/index.css
@@ -43,6 +43,18 @@ body {
             line-height: 1.8;
         }
 
+        button {
+            border: unset;
+
+            a {
+                display: block;
+                font-size: 1rem;
+                letter-spacing: 2px;
+                padding: 1rem 2rem;
+                text-decoration: none;
+            }
+        }
+
         .introduction {
             max-width: 700px;
     
