--- a/src/pages/ComponentSystem/ComponentSystem.css
+++ b/src/pages/ComponentSystem/ComponentSystem.css
@@ -8,5 +8,85 @@
         }
 
         @media ( min-width: 769px ) { padding: 0 1rem; }
+
+        h4 {
+            letter-spacing: 2px;
+        }
+
+        .component-system__summary {
+            margin-block-end: 7rem;
+
+            & > div {
+                article {
+                    margin-block-start: 1rem;
+                    padding: 1rem;
+
+                    h4 {
+                        margin: 0 0 1rem 0;
+                        text-align: center;
+                    }
+    
+                    p {
+                        margin: 0;
+                        text-align: center;
+                    }
+                }
+
+                &.component-system__summary-first {
+                    @media ( min-width: 769px ) {
+                        display: flex;
+                        justify-content: space-between;
+                        gap: 1rem;
+                    }
+
+                    article {
+                        &:first-child { background-color: #c1eaff; }
+                        &:nth-child(2) { background-color: #ffc4e4; }
+
+                        @media ( min-width: 769px ) { width: calc(50% - 0.5rem); }
+                    }
+                }
+
+                &.component-system__summary-second {
+                    article {
+                        &:first-child { background-color: #c7ffd9; }
+                        &:nth-child(2) { background-color: #fff5c1; } 
+                    }
+                }
+            } 
+        }
+
+        .component-system__info {
+            margin-block-start: 5rem;
+
+            &.learned {
+                background-color: rgb(238, 238, 238);
+                padding: 0.5rem 2rem;
+                
+                h4 { text-align: center; }
+                p { text-align: center; }
+            }
+
+            &.catalogue {
+                border: 4px solid #000;
+                margin: 4rem auto;
+                padding: 0 2rem 2rem 2rem;
+                width: fit-content;
+
+                h4 { text-align: center; }
+                p { text-align: center; }
+
+                button {
+                    display: flex;
+                    background-color: blue;
+                    
+                    margin: 2.5rem auto 0 auto;
+
+                    a {
+                        color: #fff;
+                    }
+                }
+            }
+        }
     }
 }
