--- a/src/pages/ComponentSystem/ComponentSystem.css
+++ b/src/pages/ComponentSystem/ComponentSystem.css
@@ -2,11 +2,7 @@
 #component-system {
     .component-system-container {
         margin-block-start: 6rem;
-
-        @media ( max-width: 768px ) {
-            margin: 6rem auto 0 auto;
-        }
-
+        @media ( max-width: 768px ) { margin: 4rem auto 0 auto; }
         @media ( min-width: 769px ) { padding: 0 1rem; }
 
         h4 {
@@ -14,12 +10,15 @@
         }
 
         .component-system__summary {
-            margin-block-end: 7rem;
+            margin-block-end: 4rem;
+            @media ( min-width: 769px ) { margin-block-end: 9rem; }
 
             & > div {
                 article {
-                    margin-block-start: 1rem;
+                    margin-block-start: 2rem;
                     padding: 1rem;
+
+                    @media ( min-width: 769px ) { margin-block-start: 1rem; }
 
                     h4 {
                         margin: 0 0 1rem 0;
@@ -57,7 +56,8 @@
         }
 
         .component-system__info {
-            margin-block-start: 5rem;
+            margin-block-start: 3rem;
+            @media ( min-width: 769px ) { margin-block-start: 5rem; }
 
             &.learned {
                 background-color: rgb(238, 238, 238);
@@ -68,8 +68,9 @@
             }
 
             &.catalogue {
-                border: 4px solid #000;
-                margin: 4rem auto;
+                border-top: 4px solid #000;
+                border-bottom: 4px solid #000;
+                margin: 8rem auto 4rem auto;
                 padding: 0 2rem 2rem 2rem;
                 width: fit-content;
 
@@ -78,13 +79,30 @@
 
                 button {
                     display: flex;
-                    background-color: blue;
+                    background-color: #007eed;
                     
                     margin: 2.5rem auto 0 auto;
 
-                    a {
-                        color: #fff;
-                    }
+                    a { color: #fff; }
+                }
+            }
+
+            &.columns, &.skins {
+                display: flex;
+                flex-direction: column;
+                gap: 2rem;
+
+                @media ( min-width: 769px ) { flex-direction: row; }
+
+                & > div, & > figure {
+                    @media ( min-width: 769px ) { width: calc(50% - 0.5rem); }
+                }
+
+                figure {
+                    margin: 0;
+
+
+                    img { width: 100%; }
                 }
             }
         }
