--- a/src/pages/ComponentSystem/ComponentSystem.css
+++ b/src/pages/ComponentSystem/ComponentSystem.css
@@ -1,17 +1,33 @@
 
 #component-system {
-    .component-system-container {
-        margin-block-start: 6rem;
-        @media ( max-width: 768px ) { margin: 4rem auto 0 auto; }
-        @media ( min-width: 769px ) { padding: 0 1rem; }
+    padding: 1rem 0;
 
-        h4 {
-            letter-spacing: 2px;
-        }
+    .introduction-outer-container {
+        margin: 0 auto;
+        padding: 0 1rem;
+
+        @media ( max-width: 768px ) { max-width: 550px; }
+        @media ( min-width: 769px ) { max-width: 1200px; }
+    }
+
+    .component-system-container {
+        @media ( max-width: 768px ) { margin: 4rem auto 0 auto; }
+        @media ( min-width: 769px ) { margin: 6rem auto 0 auto; }
+
+        h4 { letter-spacing: 2px; }
 
         .component-system__summary {
-            margin-block-end: 4rem;
-            @media ( min-width: 769px ) { margin-block-end: 9rem; }
+            padding: 0 1rem;
+
+            @media ( max-width: 768px ) {
+                margin: 0 auto 4rem auto;
+                max-width: 550px;
+            }
+
+            @media ( min-width: 769px ) {
+                margin: 0 auto 9rem auto;
+                max-width: 1200px;
+            }
 
             & > div {
                 article {
@@ -56,13 +72,90 @@
         }
 
         .component-system__info {
-            margin-block-start: 3rem;
-            @media ( min-width: 769px ) { margin-block-start: 5rem; }
+            padding: 0 1rem;
+
+            @media ( max-width: 768px ) {
+                margin: 3rem auto 0 auto;
+                max-width: 550px;
+            }
+
+            @media ( min-width: 769px ) {
+                margin: 5rem auto 0 auto;
+                max-width: 1200px;
+            }
+
+            &.columns, &.skins {
+                display: flex;
+                flex-direction: column;
+                gap: 1rem;
+
+                @media ( min-width: 769px ) {
+                    flex-direction: row;
+                    gap: 2rem;
+                }
+
+                figure {
+                    margin: 0 auto;
+                    img { width: 100%; }
+                }
+            }
+
+            &.columns {
+                @media ( min-width: 769px ) {
+                    & > div { width: calc(55% - 0.5rem); }
+                    & > figure { width: calc(45% - 0.5rem); }
+                }
+
+                figure {
+                    img { max-width: 700px; }
+                }
+            }
+
+            &.skins {
+                & > div, & > figure {
+                    @media ( min-width: 769px ) { width: calc(50% - 0.5rem); }
+                }
+
+                @media ( min-width: 769px ) {
+                    & > div { width: calc(60% - 0.5rem); }
+                    & > figure { width: calc(40% - 0.5rem); }
+                }
+
+                figure {
+                    img { max-width: 404px; }
+                }
+            }
+
+            &.variants, &.format {
+                @media ( max-width: 768px ) {
+                    
+                }
+            }
 
             &.learned {
                 background-color: rgb(238, 238, 238);
                 padding: 0.5rem 2rem;
                 
+                h4 {
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    text-align: center;
+
+                    span {
+                        &.emoji {
+                            font-size: 2rem;
+                            padding: 0 1rem;
+                        }
+                    }
+                }
+
+                p { text-align: center; }
+            }
+
+            &.maintenance {
+                @media ( max-width: 768px ) { margin-block-start: 4rem; }
+
                 h4 { text-align: center; }
                 p { text-align: center; }
             }
@@ -70,7 +163,7 @@
             &.catalogue {
                 border-top: 4px solid #000;
                 border-bottom: 4px solid #000;
-                margin: 8rem auto 4rem auto;
+                margin: 8rem auto 0 auto;
                 padding: 0 2rem 2rem 2rem;
                 width: fit-content;
 
@@ -79,31 +172,24 @@
 
                 button {
                     display: flex;
-                    background-color: #007eed;
-                    
+                    background-color: rgba(0, 126, 237, 80%);
                     margin: 2.5rem auto 0 auto;
+
+                    &:hover { background-color: rgba(0, 126, 237, 60%); }
+                    &:active { background-color: rgba(0, 126, 237, 100%); }
 
                     a { color: #fff; }
                 }
             }
+        }
 
-            &.columns, &.skins {
-                display: flex;
-                flex-direction: column;
-                gap: 2rem;
+        .component-system__image {
+            margin: 5rem auto 0 auto;
+            max-width: 2000px;
 
-                @media ( min-width: 769px ) { flex-direction: row; }
-
-                & > div, & > figure {
-                    @media ( min-width: 769px ) { width: calc(50% - 0.5rem); }
-                }
-
-                figure {
-                    margin: 0;
-
-
-                    img { width: 100%; }
-                }
+            img {
+                height: auto;
+                width: 100%;                
             }
         }
     }
