--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -19,12 +19,16 @@
         text-decoration: none;
 
         .card__img-container {
-            margin: 0;
-            max-height: 359px;
+            background-size: auto 100%;
+            background-position: center;
+            background-repeat: no-repeat;
+            border: 1px solid #dbdbdb;
+            margin: 0 auto;
             overflow: hidden;
             width: 100%;
-    
-            img { width: 100%; }
+            height: 320px;
+
+            @media ( min-width: 769px ) { background-size: cover; }
         }
 
         .card__title {
