--- a/src/index.css
+++ b/src/index.css
@@ -16,10 +16,12 @@ body {
 
     .page {
         margin: 5rem auto;
-        padding: 1rem;
 
+        /*
+        padding: 1rem;
         @media ( max-width: 768px ) { max-width: 550px; }
         @media ( min-width: 769px ) { max-width: 1200px; }
+        */
 
         h2 {
             font-size: 1.8rem;
@@ -91,7 +93,7 @@ body {
                 font-size: 1rem;
                 font-weight: 400;
                 line-height: 2;
-                width: 80%;
+                width: 85%;
     
                 @media ( min-width: 769px ) {
                     font-size: 1.1rem;
