--- a/src/index.css
+++ b/src/index.css
@@ -17,27 +17,10 @@ body {
     .page {
         margin: 5rem auto;
 
-        /*
-        padding: 1rem;
-        @media ( max-width: 768px ) { max-width: 550px; }
-        @media ( min-width: 769px ) { max-width: 1200px; }
-        */
-
-        h2 {
-            font-size: 1.8rem;
-        }
-
-        h3 {
-            font-size: 1.6rem;
-        }
-
-        h4 {
-            font-size: 1.4rem;
-        }
-
-        h4 {
-            font-size: 1.2rem;
-        }
+        h2 { font-size: 1.8rem; }
+        h3 { font-size: 1.6rem; }
+        h4 { font-size: 1.4rem; }
+        h4 { font-size: 1.2rem; }
 
         p {
             font-size: 1.1rem;
@@ -60,9 +43,7 @@ body {
         .introduction {
             max-width: 700px;
     
-            @media ( min-width: 769px ) {
-                padding: 0 1rem;
-            }
+            @media ( min-width: 769px ) { padding: 0 1rem; }
 
             h1.introduction__title {
                 display: flex;
@@ -83,9 +64,7 @@ body {
                     flex-direction: row;
                     font-size: 2.8rem;
     
-                    span:nth-child(2) {
-                        padding-inline-start: 1rem;
-                    }
+                    span:nth-child(2) { padding-inline-start: 1rem; }
                 }
             }
     
