--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -4,11 +4,34 @@
     max-width: 1200px;
     padding: 2.5rem 1rem 1rem 1rem;
 
+    display: flex;
+    align-content: center;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+
     @media ( max-width: 768px ) {
         display: flex;
-        justify-content: flex-end;
+        justify-content: space-between;
         max-width: 550px;
         padding: 0;
+    }
+
+    .logo {
+        margin-inline-start: 1rem;
+        @media ( max-width: 768px ) { margin-block-start: 2rem; }
+
+        a {
+            border: 3px solid #000;
+            color: #000;
+            font-size: 1.6rem;
+            font-weight: 600;
+            letter-spacing: 1px;
+            padding: 0.1rem 0.8rem;
+            text-decoration: none;
+
+            @media ( min-width: 769px ) { font-size: 1.8rem; }
+        }
     }
 
     .hamburger {
@@ -17,6 +40,7 @@
         cursor: pointer;
         padding: 2rem 2rem 1.5rem 1.5rem;
         position: absolute;
+        right: 0;
         z-index: 2;
 
         @media ( max-width: 768px ) {
@@ -46,12 +70,13 @@
     }
 
     nav {
+        display: flex;
+        align-items: center;
+        flex-direction: row;
+        justify-content: center;
+
         @media ( max-width: 768px ) {
-            /*display: none;*/
-            display: flex;
-            align-items: center;
             flex-direction: column;
-            justify-content: center;
 
             background-color: rgba(255, 255, 255, 95%);
             text-align: center;
