--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -3,6 +3,7 @@
     margin: 0 auto;
     max-width: 1200px;
     padding: 2.5rem 1rem 1rem 1rem;
+    width: 100%;
 
     display: flex;
     align-content: center;
