--- a/src/index.css
+++ b/src/index.css
@@ -44,6 +44,52 @@ body {
             }
         }
 
+        button.default {
+            display: block;
+            background-color: #fff;
+            margin: 1.2rem auto 0 auto;
+            width: 100%;
+
+            .default__text {
+                display: flex;
+                align-items: center;
+
+                border: 2px solid #000;
+                color: #000;
+                cursor: pointer;
+                font-size: 0.9rem;
+                font-weight: 600;
+                letter-spacing: 1px;
+                padding: 0.5rem 1rem;
+                width: fit-content;
+
+                .default__icon {
+                    height: 18px;
+                    width: 18px;
+                    margin-right: 0.5rem;
+
+                    &.right {
+                        margin-left: 0.5rem;
+                        margin-right: 0;
+                    }
+                }
+                
+                &:hover {
+                    @media ( min-width: 769px ) {
+                        background-color: #000;
+                        border: 2px solid #fff;
+                        color: #fff;
+
+                        .default__icon {
+                            path { fill: #fff; }
+                        }
+                    }
+                }
+
+                
+            }
+        }
+
         .introduction {
             max-width: 700px;
     
