--- a/src/pages/Challenges/Challenges.css
+++ b/src/pages/Challenges/Challenges.css
@@ -6,11 +6,7 @@
 
     .challenges-container {
         margin-block-start: 6rem;
-
-        @media ( max-width: 768px ) {
-            margin: 6rem auto 0 auto;
-        }
-
+        @media ( max-width: 768px ) {  margin: 6rem auto 0 auto;  }
         @media ( min-width: 769px ) { padding: 0 1rem; }
 
         & > div {
@@ -24,30 +20,6 @@
                 }
             }
 
-            ul {
-                margin: 1.5rem 0 2.5rem 0;
-
-                @media ( min-width: 769px ) {
-                    margin-inline-start: auto;
-                    margin-inline-end: auto;
-                    max-width: 900px;
-                }
-
-                li {
-                    font-size: 1rem;
-                    font-weight: 400;
-                    line-height: 1.3;
-                    margin-bottom: 0.5rem;
-                }
-            }
-
-            img {
-                display: flex;
-                height: auto;
-                margin: 0 auto;
-                width: 100%;
-            }
-
             .challlenges__preview {
                 background-size: 100% auto;
                 background-position: center;
@@ -59,7 +31,9 @@
                 height: 320px;
 
                 img {
-                    height: fit-content;
+                    display: flex;
+                    height: auto;
+                    margin: 0 auto;
                     max-width: 300px;
                     width: 100%;
                 }
@@ -91,72 +65,21 @@
 
             .challlenges__images {
                 display: flex;
+                flex-direction: column;
                 flex-wrap: wrap;
                 margin: 2rem auto;
 
-                @media ( max-width: 768px ) { flex-direction: column; }
-                @media ( min-width: 769px ) { flex-direction: row; }
-
                 img {
-                    box-sizing: border-box;
-                    height: fit-content;
+                    height: auto;
                     margin-block-start: 2rem;
+                    width: 100%;
+
                     @media ( max-width: 768px ) { margin: 1rem auto; }
                 }
-
-                .border { border: 1px solid #000; }
-
-                .challenges__sketch { max-width: 500px; }
-                .challenges__wireframe { max-width: 300px; }
-                .challenges__mockup { max-width: 300px; }
-
-                .desktop {
-                    max-width: 100%;
-                    @media ( min-width: 769px ) {
-                        margin: 2rem auto;
-                        max-width: 80%;
-                    }
-                }
-            }
-
-            .collapsed-content {
-                overflow: hidden;
-                transition: height 0.5s ease;
-
-                &.hidden { height: 0; }
             }
             
-            .collapse {
-                margin: 1.2rem auto 0 auto;
-                max-width: 900px;
+            .view-more { max-width: 900px; }
 
-                .collapse-inner {
-                    border: 2px solid #000;
-                    color: #000;
-                    cursor: pointer;
-                    display: flex;
-                    padding: 0.5rem 1rem;
-                    width: fit-content;
-                    
-                    span {
-                        font-weight: 600;
-                        letter-spacing: 1px;
-                        padding-right: 0.5rem;
-                    }
-
-                    path { fill: #000; }
-
-                    &:hover {
-                        @media ( min-width: 769px ) {
-                            background-color: #000;
-                            border: 2px solid #fff;
-                            color: #fff;
-                            path { fill: #fff; }
-                        }
-                    }
-                }
-
-            }
         }
     }
 }
