--- a/src/pages/Contact/Contact.css
+++ b/src/pages/Contact/Contact.css
@@ -22,7 +22,7 @@
 
             a {
                 color: #fff;
-                font-size: 1.4rem;
+                font-size: 1.2rem;
                 font-weight: 600;
                 letter-spacing: 1px;
                 margin: 0.5rem 0;
@@ -30,7 +30,9 @@
                 padding: 1rem;
                 text-align: center;
                 text-decoration: none;
-                width: 100%;           
+                width: 100%;
+                
+                @media ( min-width: 769px ) { font-size: 1.4rem; }
 
                 &.linkedin {
                     color: #0077b5;
