Added Mood Board to PersonalWebsite.

--- a/src/pages/PersonalWebsite/PersonalWebsite.css
+++ b/src/pages/PersonalWebsite/PersonalWebsite.css
@@ -33,7 +33,14 @@
 
             figure {
                 display: flex;
+                align-items: center;
                 justify-content: center;
+                margin-inline-start: auto;
+                margin-inline-end: auto;
+
+                img {
+                    width: 100%;
+                }
 
                 &.top-img {
                     margin-block-end: 2rem;
@@ -48,7 +55,7 @@
                     margin-block-start: 2rem;
                 }
 
-                img {}
+                &.moodboard { max-width: 700px; }
             }
 
             &.conclusions {
