--- a/src/pages/PersonalWebsite/PersonalWebsite.css
+++ b/src/pages/PersonalWebsite/PersonalWebsite.css
@@ -51,7 +51,7 @@
                     margin-block-start: 4rem;
                 }
 
-                &.moodboard, &.sitemap { max-width: 700px; }
+                &.moodboard, &.sitemap, &.sketches { max-width: 700px; }
                 &.lighthouse { max-width: 460px; }
                 &.cssart { max-width: 300px; }
             }
