Added Style Guide image to PersonalWebsite.

--- a/src/pages/PersonalWebsite/PersonalWebsite.css
+++ b/src/pages/PersonalWebsite/PersonalWebsite.css
@@ -43,6 +43,7 @@
                 }
                 &.bottom-img { margin-block-start: 4rem; }
 
+                &.styleguide { max-width: 800px; }
                 &.moodboard, &.sitemap, &.sketches, &.wireframes, &.mockups { max-width: 700px; }
                 &.lighthouse { max-width: 460px; }
                 &.cssart { max-width: 300px; }
