Semantic HTML and accessibility.

--- a/src/pages/Challenges/Challenges.css
+++ b/src/pages/Challenges/Challenges.css
@@ -9,7 +9,7 @@
         @media ( max-width: 768px ) {  margin: 6rem auto 0 auto;  }
         @media ( min-width: 769px ) { padding: 0 1rem; }
 
-        & > div {
+        & > article {
             &:not(:first-child) { margin-block-start: 6rem; }
 
             p {
