--- a/src/pages/Contact/Contact.css
+++ b/src/pages/Contact/Contact.css
@@ -14,59 +14,71 @@
             max-width: 900px;
         }
 
-        & > div {
-            display: flex;
-            align-items: center;
-            flex-direction: column;
+        & > nav {
             margin-block-start: 3rem;
 
-            a {
-                color: #fff;
-                font-size: 1.2rem;
-                font-weight: 600;
-                letter-spacing: 1px;
-                margin: 0.5rem 0;
-                max-width: 400px;
-                padding: 1rem;
-                text-align: center;
-                text-decoration: none;
-                width: 100%;
+            ul {
+                display: flex;
+                align-items: center;
+                flex-direction: column;
                 
-                @media ( min-width: 769px ) { font-size: 1.4rem; }
+                list-style: none;
+                margin: 0;
+                padding: 0;
 
-                &.linkedin {
-                    color: #0077b5;
-                    border: 4px solid #0077b5;
-                    &:hover {
-                        color: #fff;
-                        background-color: #0077b5;
-                    }
-                }
+                li {
+                    margin: 0.5rem 0;
+                    max-width: 400px;
+                    width: 100%;
 
-                &.github {
-                    color: #000;
-                    border: 4px solid #000;
-                    &:hover {
+                    a {
                         color: #fff;
-                        background-color: #000;
-                    }
-                }
-
-                &.instagram {
-                    color: #ed4b8a;
-                    border: 4px solid #ed4b8a;
-                    &:hover {
-                        color: #fff;
-                        background-color: #ed4b8a;
-                    }
-                }
-
-                &.tiktok {
-                    color: #ff0050;
-                    border: 4px solid #ff0050;
-                    &:hover {
-                        color: #fff;
-                        background-color: #ff0050;
+                        display: block;
+                        font-size: 1.2rem;
+                        font-weight: 600;
+                        letter-spacing: 1px;
+                        padding: 1rem;
+                        text-align: center;
+                        text-decoration: none;
+                        width: 100%;
+                        
+                        @media ( min-width: 769px ) { font-size: 1.4rem; }
+        
+                        &.linkedin {
+                            color: #0077b5;
+                            border: 4px solid #0077b5;
+                            &:hover {
+                                color: #fff;
+                                background-color: #0077b5;
+                            }
+                        }
+        
+                        &.github {
+                            color: #000;
+                            border: 4px solid #000;
+                            &:hover {
+                                color: #fff;
+                                background-color: #000;
+                            }
+                        }
+        
+                        &.instagram {
+                            color: #ed4b8a;
+                            border: 4px solid #ed4b8a;
+                            &:hover {
+                                color: #fff;
+                                background-color: #ed4b8a;
+                            }
+                        }
+        
+                        &.tiktok {
+                            color: #ff0050;
+                            border: 4px solid #ff0050;
+                            &:hover {
+                                color: #fff;
+                                background-color: #ff0050;
+                            }
+                        }
                     }
                 }
             }
